force-app/main/default/objects/Error_Notification_Config__mdt/Error_Notification_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration of notification to preset email addresses for failed communications and exceptions.</description>
    <label>Error Notification Config</label>
    <pluralLabel>Error Notification Config</pluralLabel>
</CustomObject>