force-app/main/default/objects/Error_Notification_Config__mdt/fields/Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Email_Addresses__c</fullName>
    <description>Email addresses that need to receive the notification. Email address should be separated by comma.</description>
    <label>Email Addresses</label>
    <type>TextArea</type>
</CustomField>