force-app/main/default/objects/Error_Notification_Config__mdt/fields/Error_Notification_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Error_Notification_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Notification Enabled</label>
    <type>Checkbox</type>
</CustomField>