force-app/main/default/objects/Error_Notification_Config__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Application_Name__c</columns>
    <columns>Email_Addresses__c</columns>
    <columns>Error_Notification_Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>